@@ -1,6 +1,7 @@
 Release Notes
 
 * current
+  * changed Setupper not to make redundant rule for panda.um
   * reduced timeout for high prio holding jobs
   * added -info to eventLookupClientEI
   * changed dispatcher to send DDM endpoints
